Fix em issue in dark mode

--- a/_sass/gravid/_dark-mode.scss
+++ b/_sass/gravid/_dark-mode.scss
@@ -21,6 +21,10 @@
     color: #c9d1d9;
   }
 
+  .typo-em, .typo em, legend, caption {
+    color: #c9d1d9;
+  }
+
   strong {
     color: #f6f0fc;
   }
